<resources>
    <string name="app_name">DreamChat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="old_password"> Old Password</string>
    <string name="new_password"> New Password</string>
    <string name="retype_password"> Retype Password</string>
    <string name="prompt_password2">Re-enter password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password2">This password is too long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="phone_update">Phone</string>
    <string name="first_name_update">First name</string>
    <string name="last_name_update">Last name</string>

    <string name="infoContactUs">
        Monika Jaššová - monika.jassova@akademiasovy.sk
        \nPatrik Patinák - patri.patinak@akademiasovy.sk
        \nMichal Borovský - michal.borovsky@akademiasovy.sk
    </string>
    <string name="contactUs">Contact us</string>

    <!-- Strings related to menu activity -->
    <string name="tab_profile">Me</string>
    <string name="tab_conversations">Conversations</string>
    <string name="tab_contacts">Contacts</string>

    <string name="subheader_requests">Requests</string>
    <string name="subheader_friends">Friends</string>
    <string name="subheader_others">Others</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">Dream Chat</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username">Username</string>
    <string name="searchview">Find a Contact...</string>
    <string name="menu_friend_message">Write a Message</string>
    <string name="menu_friend_profile">View Profile</string>
    <string name="menu_friend_remove">Remove Person from Friends</string>

    <string-array name="navigation_drawer_items_array">
        <item>Profile</item>
        <item>Settings</item>
        <item>Help</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="prefs_theme_key">theme</string>

</resources>
