<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.boush.dreamchat.PasswordActivity">

    <EditText
    android:id="@+id/passwordUpadte"
    android:drawableRight="@drawable/ic_key"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/old_password"
    android:imeActionId="@+id/login"
    android:imeActionLabel="@string/action_sign_in_short"
    android:imeOptions="actionUnspecified"
    android:inputType="textPassword"
    android:maxLines="1"
    android:singleLine="true"
    android:freezesText="true"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:textStyle="bold"
     />

    <EditText
        android:id="@+id/editText"
        android:drawableRight="@drawable/ic_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:freezesText="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/passwordUpadte"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText2"
        android:drawableRight="@drawable/ic_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retype_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:freezesText="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textStyle="bold"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/button"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
