<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@color/colorBackground">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.boush.dreamchat.MeFragment">



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="900dp"
        >
        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme" />

        <ImageView android:id="@+id/ImageView" android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1"
            android:src="@drawable/profile_photo"
            android:maxHeight="70dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="40dp"
            android:layout_above="@+id/selectPhoto"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />




        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_person"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userNameUpdate"
            android:hint="@string/username"
            android:freezesText="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textStyle="bold"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



        <Button
            android:text="Change Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitUpdate"

            android:height="60dp"
            android:width="150dp"
            android:layout_below="@+id/lastNameUpdate"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:src="@drawable/ic_rotate_profile_picture"
            android:background="@null"
            android:onClick="rotate"
            android:paddingRight="20dp"
            android:layout_below="@+id/ImageView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Basic info"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:layout_below="@+id/selectPhoto"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Addtional info"
            android:id="@+id/textView2"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textStyle="bold"
            android:layout_above="@+id/phoneUpdate"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_phone_white_18dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/phoneUpdate"
            android:hint="@string/phone_update"
            android:freezesText="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="117dp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/userNameUpdate"
            android:layout_alignEnd="@+id/userNameUpdate" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_person"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstNameUpdate"
            android:hint="@string/first_name_update"
            android:freezesText="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textStyle="bold"
            android:layout_alignTop="@+id/userNameUpdate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="52dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_person"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lastNameUpdate"
            android:hint="@string/last_name_update"
            android:freezesText="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textStyle="bold"
            android:layout_below="@+id/firstNameUpdate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



        <android.support.design.widget.FloatingActionButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_select_photo"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            android:id="@+id/selectPhoto"

            android:backgroundTint="@color/colorAccent"

            android:layout_centerVertical="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentBottom="false"
            android:layout_marginLeft="10dp" />


        <android.support.design.widget.FloatingActionButton
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:fabSize="normal"
            android:id="@+id/uploadPhoto"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginBottom="47dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_alignParentRight="false"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>
    </ScrollView>
